<resources>
    <string name="app_name">IntelliHome</string>
    <string name="nombreRegister">Su Nombre</string>
    <string name="apellidosRegister">Sus Apellidos</string>
    <string name="fotoRegister">Foto</string>
    <string name="usuarioRegister">Usuario</string>
    <string name="telefonoRegister">Teléfono</string>
    <string name="emailRegister">Correo</string>
    <string name="contrasenaRegister">Contraseña</string>
    <string name="recontrasenaRegister">Repite tú contraseña</string>
    <string name="quehacerRegister">¿Qué quieres hacer?</string>
    <string name="propietarioRegister">Propietario</string>
    <string name="alquilarRegister">Inquilino</string>
    <string name="ibanRegister">Cuenta IBAN</string>
    <string name="numtarjetaRegister">Número de tarjeta</string>
    <string name="cvvRegister">CVV</string>
    <string name="titulartarjetaRegister">Titular de la tarjeta</string>
    <string name="termsycondRegister">Estoy de acuerdo con los términos de condiciones y políticas de privacidad.</string>
    <string name="crearcuentaRegister">Crear cuenta</string>
    <string name="prompt_casa_preferida">Casa preferida</string>
    <string name="prompt_vehiculo">Vehículo</string>
    <string name="prompt_domicilio">Domicilio</string>
    <string name="msjabtActivity">Cerrar</string>
    <string name="apartaRegisterActivity">Apartamento</string>
    <string name="casacampRegisterActivity">Casa en el campo</string>
    <string name="casaplaRegisterActivity">Casa en la playa</string>
    <string name="cabañaRegisterActivity">Cabaña</string>
    <string name="pisocciuRegisterActivity">Piso en la ciudad</string>
    <string name="x4RegisterActivity">Hatchback</string>
    <string name="sedanRegisterActivity">Sedán</string>
    <string name="pickupRegisterActivity">PickUp</string>
    <string name="suvRegisterActivity">SUV</string>
    <string name="camionetaRegisterActivity">Convertible</string>
    <string name="sanjoseRegisterActivity">San José</string>
    <string name="alajuelaRegisterActivity">Alajuela</string>
    <string name="herediaRegisterActivity">Heredia</string>
    <string name="cartagoRegisterActivity">Cartago</string>
    <string name="guanaRegisterActivity">Guanacaste</string>
    <string name="puntarenasRegisterActivity">Puntarenas</string>
    <string name="limonRegisterActivity">Limón</string>
    <string name="cuentcreexRegisterActivity">Cuenta creada con éxito</string>
    <string name="debeacepterRegisterActivity">Debe aceptar los Términos y Condiciones</string>
    <string name="requecontraRegisterActivity">Requerimientos de contraseña</string>
    <string name="contradebecontRegisterActivity">La contraseña debe contener:</string>
    <string name="mayusculacontraRegisterActivity">• Al menos 1 letra mayúscula</string>
    <string name="minusculacontraRegisterActivity">• Al menos 1 letra minúscula</string>
    <string name="numcontraRegisterActivity">• Al menos 1 número</string>
    <string name="simbocontraRegisterActivity">• Al menos 1 símbolo</string>
    <string name="mincaractcontraRegisterActivity">• Mínimo 8 caracteres</string>
    <string name="tomarfotoRegisterActivity">Tomar foto</string>
    <string name="selectgaleRegisterActivity">Seleccionar de la galería</string>
    <string name="selectimaRegisterActivity">Seleccionar imágen</string>
    <string name="accesoimaRegisterActivity">Permiso de acceso a imágenes denegado</string>
    <string name="elegirrolRegisterActivity">Debe elegir un rol en la aplicación</string>
    <string name="campoobliRegisterActivity">Este campo es obligatorio </string>
    <string name="numtarjetainvRegisterActivity">Número de tarjeta inválido </string>
    <string name="cvvinvRegisterActivity">CVV inválido </string>
    <string name="fechavencsupRegisterActivity">La fecha de vencimiento debe ser posterior a la fecha actual </string>
    <string name="debe18tenerRegisterActivity">Debes tener al menos 18 años </string>
    <string name="ibaninvRegisterActivity">IBAN inválido </string>
    <string name="emailinvRegisterActivity">Correo inválido </string>
    <string name="contrainvRegisterActivity">Contraseña inválida </string>
    <string name="contranocoindiRegisterActivity">Las contraseñas no coinciden </string>
    <string name="ayudaActivityCustom">Ayuda </string>
    <string name="temaActivityCustom">Tema </string>
    <string name="idiomaActivityCustom">Idioma </string>
    <string name="inglesActivityCustom">Inglés </string>
    <string name="espanolActivityCustom">Español </string>
    <string name="portuActivityCustom">Portugués </string>
    <string name="hunActivityCustom">Húngaro </string>
    <string name="emailusuariotelefonoActivityLogin">Correo, Usuario o teléfono </string>
    <string name="contraActivityLogin">Contraseña </string>
    <string name="mantenersesActivityLogin">Mantener Sesión </string>
    <string name="inicsesActivityLogin">Iniciar Sesión </string>
    <string name="recucontraActivityLogin">Recuperar contraseña </string>
    <string name="nousuarioActivityLogin">¿No tiene cuenta? </string>
    <string name="inicsesconActivityLogin">Iniciar sesión con </string>
    <string name="ingrecorreoActivityRecoverPass">Ingrese el correo </string>
    <string name="envcorreoActivityRecoverPass">Enviar correo de recuperación </string>
    <string name="hobbiesRegister">Hobbies </string>
    <string name="creadoresDialogAbout">JsonITsolutions </string>
    <string name="fechaDialogAbout">Última modificación: 3 de octubre de 2024 </string>
    <string name="colorActivitypicker">Color </string>
    <string name="title">Términos y Condiciones de Uso de Intellihome</string>
    <string name="effective_date">Fecha de entrada en vigor: 3/10/2024</string>
    <string name="introduction">Bienvenido a Intellihome. Al acceder y utilizar nuestra aplicación, usted acepta cumplir con los siguientes términos y condiciones. Si no está de acuerdo con estos términos, le solicitamos que no utilice nuestra aplicación.</string>
    <string name="section1">1. Definiciones</string>
    <string name="section1_content">• Intellihome: Se refiere a la aplicación móvil y/o plataforma web que facilita el alquiler de propiedades.\n\n• Usuario: Cualquier persona que se registre y utilice Intellihome.\n\n• Propiedad: Cualquier inmueble disponible para alquiler a través de Intellihome.</string>
    <string name="section2">2. Aceptación de Términos</string>
    <string name="section2_content">Al registrarse y utilizar Intellihome, usted acepta estos términos y condiciones en su totalidad. Nos reservamos el derecho a modificar estos términos en cualquier momento, por lo que recomendamos revisarlos periódicamente.</string>
    <string name="section3">3. Registro de Usuario</string>
    <string name="section3_content">Para utilizar algunas funcionalidades de la aplicación, es necesario crear una cuenta. El Usuario se compromete a proporcionar información veraz y actualizada. Es responsabilidad del Usuario mantener la confidencialidad de sus credenciales de acceso.</string>
    <string name="section4">4. Uso de la Aplicación</string>
    <string name="section4_content">• Intellihome permite a los Usuarios buscar y alquilar propiedades.\n\n• El Usuario se compromete a utilizar la aplicación solo para fines lícitos y de acuerdo con las leyes aplicables.</string>
    <string name="section5">5. Propiedades</string>
    <string name="section5_content">• Las propiedades listadas en Intellihome son ofrecidas por propietarios y agentes inmobiliarios.\n\n• Intellihome no es responsable de la veracidad, disponibilidad o estado de las propiedades.</string>
    <string name="section6">6. Comisiones y Pagos</string>
    <string name="section6_content">• Intellihome puede cobrar comisiones por los servicios ofrecidos. Las tarifas serán comunicadas claramente antes de confirmar cualquier transacción.\n\n• El Usuario acepta realizar los pagos a través de los métodos habilitados en la aplicación.</string>
    <string name="section7">7. Política de Cancelación</string>
    <string name="section7_content">Las políticas de cancelación varían según cada propiedad y serán indicadas en el anuncio correspondiente. Es responsabilidad del Usuario revisar estas políticas antes de realizar una reserva.</string>
    <string name="section8">8. Limitación de Responsabilidad</string>
    <string name="section8_content">Intellihome no será responsable de daños directos, indirectos, incidentales o consecuentes que surjan del uso de la aplicación o de la imposibilidad de uso.</string>
    <string name="section9">9. Propiedad Intelectual</string>
    <string name="section9_content">Todo el contenido de Intellihome, incluyendo textos, gráficos y logotipos, está protegido por derechos de propiedad intelectual. Queda prohibida la reproducción o distribución sin autorización.</string>
    <string name="section10">10. Modificaciones a los Términos</string>
    <string name="section10_content">Nos reservamos el derecho de modificar estos términos en cualquier momento. Las modificaciones entrarán en vigor al ser publicadas en la aplicación. El uso continuado de Intellihome tras la publicación de cambios implica la aceptación de los mismos.</string>
    <string name="section11">11. Legislación Aplicable</string>
    <string name="section11_content">Estos términos se rigen por las leyes de Costa Rica. Cualquier disputa relacionada con el uso de Intellihome será resuelta en los tribunales de San José.</string>
    <string name="section12">12. Contacto</string>
    <string name="section12_content">Para cualquier pregunta o inquietud sobre estos términos, por favor contáctenos en intellihome@gmail.com.</string>
    <string name="btn_continue">Continuar</string>
    <string name="signUp">Registrarse</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="publicar_casa">Publicar Casa</string>
    <string name="monitorear_viviendas">Monitorear Viviendas</string>
    <string name="perfil">Perfil</string>
    <string name="buscar">Buscar</string>
    <string name="pagina_principal">Página Principal</string>
    <string name="open_nav_drawer">Abrir Menú</string>
    <string name="close_nav_drawer">Cerar Menú</string>
    <string name="descripcionTitle">Descripción</string>
    <string name="descripcionHint">Ingrese una descripción...</string>
    <string name="numHabitacionesTitle">Num. Habitaciones</string>
    <string name="precioPorNocheTitle">Precio por noche</string>
    <string name="precioPorNocheHint">Ingrese el precio por noche</string>
    <string name="imagenesDeLaCasaTitle">Imágenes de la casa</string>
    <string name="reglasDeUsoTitle">Reglas de uso</string>
    <string name="amenidadesTitle">Amenidades</string>
    <string name="btnAdd">+</string>
    <string name="tipoCasaHint">Tipo de casa</string>
    <string name="vehiculoHint">Vehículo</string>
    <string name="checkboxHours">Check In 3:00pm / Check Out 11:00am</string>
    <string name="btnPublish">Publicar</string>
    <string name="reglasHint">Reglas #</string>
    <string name="amenidadHint">Amenidad #</string>
    <string name="descripcionHint2">Descripción</string>
    <string name="precioPorNocheHint2">Precio por noche</string>
    <string name="numHabitaciones">Número de habitaciones</string>
    <string name="btnAddReglas">Añadir Regla</string>
    <string name="btnAddAmenidades">Añadir Amenidad</string>
    <string name="btnPhoto">Añadir Foto</string>
    <string name="ubicacion">Ubicación</string>
    <string name="elegir_ubicaci_n">Elegir ubicación</string>
    <string name="hint_latitud">Latitud: </string>
    <string name="hint_longitud">Longitud: </string>
    <string name="labelTitulo">Titulo de la residencia</string>
    <string name="inputTitulo">Ingrese un titulo para su residencia</string>
    <string name="FechaInicio">Fecha Inicio</string>
    <string name="FechaFinal">Fecha Final</string>
</resources>