<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_profile"
            android:title="@string/perfil"
            android:icon="@drawable/ic_profile"/>

        <item
            android:id="@+id/menu_settings"
            android:title="@string/configuraciones"
            android:icon="@drawable/settings"/>

        <item
            android:id="@+id/menu_add_house"
            android:title="@string/publicar_casa"
            android:icon="@drawable/ic_add_location"/>

        <item
            android:id="@+id/menu_control_house"
            android:title="@string/monitorear_viviendas"
            android:icon="@drawable/ic_hardware"/>
    </group>

</menu>